chanegd the presets for dusk and dawn and fixed the loader screen to overlap the preset caching screens.

--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -3,15 +3,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #00000000; /* Dark background color */
+    width: 100vw;
+    height: 100vh;
+    background-color: white; /* Dark background color */
     color: black;
     flex-direction: row;
   }
   
   .loader-icon {
     animation: rotate 2s linear infinite;
+    color: black;
   }
   
   @keyframes rotate {
